--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,49 @@
 /* custom styles */
+body {
+  font-family: 'Open Sans', light;
+}
+.header {
+  background-color: #f7df1e;
+  border-bottom: 1px solid #f7df1e;
+
+  padding-top: 20px;
+}
+footer {
+  background-color: #f7df1e;
+  padding-top: 20px;
+  min-height: 200px;
+  text-align: center;
+}
+img {
+  border: 2px;
+  margin-right: 20px;
+  padding: 10px;
+}
+.header h1{
+  font-family: 'Sedgwick Ave Display', cursive;
+  display: inline-block;
+  font-size: 300%;
+  margin: 50px 0 0 0;
+  vertical-align: top;
+}
+h1, h2 {
+  font-family: 'Sedgwick Ave Display', cursive;
+  margin: 0px;
+}
+nav ul li {
+  display: inline-block;
+  padding: 0 30px;
+}
+nav ul li:first-child {
+  padding-left: 0;
+}
+nav {
+  text-align: center;
+}
+.content{
+    background-color: black;
+    color: white;
+}
+ol {
+  margin: 0;
+}
