--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -335,28 +335,6 @@ p a {
 
 /*
   ========================================
-  Bands
-  ========================================
-*/
-.bands-info {
-  border: 1px solid #dfe2e5;
-  border-radius: 5px;
-  margin-top: 88px;
-  padding-bottom: 22px;
-  text-align: center;
-}
-.bands {
-  margin-bottom: 44px;
-}
-.bands img {
-  border-radius: 50%;
-  height: 130px;
-  margin: -66px 0 22px 0;
-  vertical-align: top;
-}
-
-/*
-  ========================================
   Form
   ========================================
 */
@@ -368,53 +346,12 @@ select,
 textarea {
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-/*-------------------------------------------------------------------*/
-/* custom styles */
-/*body {
-  font-family: 'Open Sans', light;
-}
-.header {
-  background-color: #f7df1e;
-  border-bottom: 1px solid #f7df1e;
 
-  padding-top: 20px;
+.pic {
+  border-radius: 30px;
+  border: white 1px solid;
+  height: 250px;
+  width: 250px;
+  margin-left: 36.5%;
+  margin-bottom: 20px;
 }
-footer {
-  background-color: #f7df1e;
-  padding-top: 20px;
-  min-height: 200px;
-  text-align: center;
-}
-img {
-  border: 2px;
-  margin-right: 20px;
-  padding: 10px;
-}
-.header h1{
-  font-family: 'Sedgwick Ave Display', cursive;
-  display: inline-block;
-  font-size: 300%;
-  margin: 50px 0 0 0;
-  vertical-align: top;
-}
-h1, h2 {
-  font-family: 'Sedgwick Ave Display', cursive;
-  margin: 0px;
-}
-nav ul li {
-  display: inline-block;
-  padding: 0 30px;
-}
-nav ul li:first-child {
-  padding-left: 0;
-}
-nav {
-  text-align: center;
-}
-.content{
-    background-color: black;
-    color: white;
-}
-ol {
-  margin: 0;
-}*/
