--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -348,6 +348,14 @@ textarea {
   margin-left: 36.5%;
   margin-bottom: 20px;
 }
+.pic2 {
+  border-radius: 50px;
+  border: white 1px solid;
+  height: 250px;
+  width: 250px;
+  margin-left: 35%;
+  margin-bottom: 20px;
+}
 .work {
   margin: 0 auto;
   width: 500px;
