--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -348,9 +348,7 @@ textarea {
   margin-left: 36.5%;
   margin-bottom: 20px;
 }
-.pic2 {
-  border-radius: 50px;
-  border: white 1px solid;
+.picthree {
   height: 250px;
   width: 250px;
   margin-left: 35%;
